--- a/src/components/featuredInfo/featuredInfo.module.css
+++ b/src/components/featuredInfo/featuredInfo.module.css
@@ -1,51 +1,58 @@
 .featured {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .featuredItem {
-  flex: 1;
-  margin: 0px 20px;
-  padding: 30px;
+  width: 222px;
+  height: 105px;
+  background: #363a3f;
   border-radius: 10px;
+  /* padding: 24px 20px; */
+  color: white;
+
+  /* flex: 1; */
+
+  /* margin: 0px 20px; */
+  padding: 30px;
   cursor: pointer;
-  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  /* -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75); */
+  /* box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75); */
 }
 
-.featuredTitle{
-    font-size: 20px;
+.featuredTitle {
+  font-size: 20px;
 }
 
-.featuredMoneyContainer{
-    margin: 10px 0px;
-    display: flex;
-    align-items: center;
+.featuredMoneyContainer {
+  margin: 10px 0px;
+  display: flex;
+  align-items: center;
 }
 
-.featuredMoney{
-    font-size: 30px;
-    font-weight: 600;
+.featuredMoney {
+  font-size: 30px;
+  font-weight: 600;
 }
 
-.featuredMoneyRate{
-    display: flex;
-    align-items: center;
-    margin-left: 20px;
+.featuredMoneyRate {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
 }
 
-.featuredIcon{
-    font-size: 14px;
-    margin-left: 5px;
-    color: green;
+.featuredIcon {
+  font-size: 14px;
+  margin-left: 5px;
+  color: green;
 }
 
-.featuredIcon.negative{
-    color: red;
+.featuredIcon.negative {
+  color: red;
 }
 
-.featuredSub{
-    font-size: 15px;
-    color: gray;
+.featuredSub {
+  font-size: 15px;
+  color: gray;
 }
