--- a/src/components/widgetLg/widgetLg.module.css
+++ b/src/components/widgetLg/widgetLg.module.css
@@ -1,7 +1,8 @@
 .widgetLg {
   flex: 2;
-  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  background: #ffffff;
+  border: 1px solid #f5f5f5;
+  border-radius: 10px;
   padding: 20px;
 }
 
