--- a/src/components/widgetSm/widgetSm.module.css
+++ b/src/components/widgetSm/widgetSm.module.css
@@ -1,9 +1,11 @@
 .widgetSm {
-  flex: 1;
-  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  flex: 1 1;
   padding: 20px;
   margin-right: 20px;
+  width: 716px;
+  background: #ffffff;
+  border: 1px solid #f5f5f5;
+  border-radius: 10px;
 }
 
 .widgetSmTitle {
