--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -27,7 +27,7 @@
 }
 
 .sidebarListItem {
-  padding: 5px;
+  margin: 1em 0;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -44,4 +44,7 @@
 .sidebarIcon {
   margin-right: 5px;
   font-size: 20px;
+  width: 20px;
+  height: 20px;
+  margin: 0 10px;
 }
