--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -98,6 +98,16 @@
   padding: 14px 20px;
   gap: 10px;
 }
+.googleIcon {
+  width: 24px;
+  height: 24px;
+  object-fit: cover;
+}
+.errorMsg {
+  color: red;
+  font-size: 20px;
+  text-align: center;
+}
 
 .googleButton img {
   height: 30px;
