--- a/src/components/farmInput/farmInput.module.css
+++ b/src/components/farmInput/farmInput.module.css
@@ -12,3 +12,10 @@
   gap: 20px;
   text-align: left;
 }
+.input {
+  margin: 10px 0;
+  padding: 15px;
+  border: 1px solid #f2f2f2;
+  border-radius: 5px;
+  font-size: 20px;
+}
