query added: home widgets

--- a/src/components/widgetLg/widgetLg.module.css
+++ b/src/components/widgetLg/widgetLg.module.css
@@ -37,6 +37,10 @@
 .widgetLgDate,
 .widgetLgAmount {
   font-weight: 300;
+  text-align: left;
+}
+.widgetLgStatus {
+  text-align: left;
 }
 
 .widgetLgButton {
