--- a/src/components/chart/chart.css
+++ b/src/components/chart/chart.css
@@ -12,8 +12,9 @@
 
 .chart {
   flex: 4;
-  -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
-  box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+  border: 1px solid #dadce0;
+  border-radius: 10px;
+  margin: 1em;
   padding: 10px;
   color: gray;
 }
