--- a/src/components/featuredInfo/featuredInfo.css
+++ b/src/components/featuredInfo/featuredInfo.css
@@ -3,12 +3,16 @@
   justify-content: space-between;
   flex: 1;
   padding: 10px;
-  -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
-  box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+  border: 1px solid #dadce0;
   border-radius: 10px;
   height: 100px;
+  cursor: pointer;
 }
-
+.widget:hover {
+  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
+    0 1px 3px 1px rgba(60, 64, 67, 0.15);
+  transition: all 0.4s ease-in-out 0s;
+}
 .left,
 .right {
   display: flex;
