--- a/src/components/widgetLg/widgetLg.module.css
+++ b/src/components/widgetLg/widgetLg.module.css
@@ -1,7 +1,8 @@
 .widgetLg {
   flex: 2;
   background: #ffffff;
-  border: 1px solid #f5f5f5;
+  border: 1px solid #dadce0;
+
   border-radius: 10px;
   padding: 20px;
 }
