--- a/src/components/chart/chart.css
+++ b/src/components/chart/chart.css
@@ -14,7 +14,7 @@
   flex: 4;
   border: 1px solid #dadce0;
   border-radius: 10px;
-  margin: 1em;
+  margin: 20px;
   padding: 10px;
   color: gray;
 }
@@ -23,4 +23,9 @@
 }
 .chartGrid {
   stroke: rgb(228, 225, 225);
+}
+@media only screen and (max-width: 600px) and (min-width: 320px) {
+  .chart {
+    display: none;
+  }
 }
