--- a/src/pages/tea/tea.module.css
+++ b/src/pages/tea/tea.module.css
@@ -14,3 +14,18 @@
   flex-direction: column;
   gap: 1em;
 }
+@media only screen and (max-width: 768px) and (min-width: 320px) {
+  .myFarm {
+    width: 80%;
+  }
+
+  .teaContainer {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .rightContainer {
+    align-items: center;
+    width: 100%;
+  }
+}
