--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -1,10 +1,10 @@
 .sidebar {
-  flex: 1;
+  /* flex: 1; */
   border-right: 1px solid #dadce0;
-  /* height: 100vh; */
+  height: 100vh;
   background-color: #fafafa;
   position: sticky;
-  top: 50px;
+  top: 0;
 }
 
 .sidebarWrapper {
@@ -35,6 +35,7 @@
   width: 200px;
   height: 48px;
   border-radius: 8px;
+  text-decoration: none;
 }
 
 .sidebarListItem.active,
